--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FF0066" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Puru Puru 0x706c777478"
+      content="0x706c777478: 6B6E6F636B5F6B6E6F636B5F6B6E6F636B5F626563617573655F6F665F7468655F6C6F73735F6F665F67726176697479"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
